# csv-utils

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
csv_utils/: __init__.py  load_tables.py  manipulations.py  save_.py
csv_utils/cli/: __init__.py  cli.py  helpers.py
csv_utils/commands/: __init__.py  merge.py  split.py
csv_utils/objects/: __init__.py
csv_utils/operations/: __init__.py  load_tables.py  manipulations.py
csv_utils/utils/: __init__.py  save_.py
split/: split.py
src/: __init__.py  cli.py
src/commands/: __init__.py  merge.py  split.py
src/objects/: __init__.py  options.py
src/utils/: __init__.py  load_tables.py  manipulations.py  save_.py
tests/: test_csv_utils.py  test_loading.py  test_splitting.py
tests/data/sample/: sample-01.tsv  sample-02.csv  sample-02.tsv
tests/data/titanic/: titanic.csv
tests/data/titanic/four-split/: titanic_first.csv  titanic_fourth.csv  titanic_second.csv  titanic_third.csv
tests/data/titanic/two-split/: titanic_first.csv  titanic_second.csv
tests/utils/: __init__.py  constants.py  fixtures.py  helpers.py
