[tool.poetry]
name = "csv-utils"
version = "0.1.0"
description = "Command line interface for utility functions on tabular data."
authors = ["Rodrigo Vallejos"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
